kubernetes/platform/kyverno-reporter/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kyverno-reporter
  namespace: kyverno-reporter
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: policy-reporter
      app.kubernetes.io/instance: policy-reporter
  ingress:
    - fromEntities:
        - cluster
        - ingress
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEntities:
        - cluster
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kyverno-reporter-kyverno-plugin
  namespace: kyverno-reporter
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: policy-reporter-kyverno-plugin
      app.kubernetes.io/instance: policy-reporter
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEntities:
        - cluster
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kyverno-reporter-trivy-plugin
  namespace: kyverno-reporter
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: policy-reporter-trivy-plugin
      app.kubernetes.io/instance: policy-reporter
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEntities:
        - cluster
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kyverno-reporter-ui
  namespace: kyverno-reporter
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: policy-reporter-ui
      app.kubernetes.io/instance: policy-reporter
  ingress:
    - fromEntities:
        - cluster
        - ingress
  egress:
    - toEntities:
        - cluster
